cmake_minimum_required(VERSION 3.26)
project(yftcp)

set(CMAKE_CXX_STANDARD 17)

add_executable(yftcp

        src/arp.c
        src/main.c
        src/yftcp.h
        src/function.h
        src/function.c
        src/config.h
        src/ring.c
        src/ring.h
        src/deal_packet.c
        src/deal_packet.h
        src/arp_table.c
        src/arp_table.h
        src/arp_table.c
        src/list.h
        src/timer.h
        src/timer.c
        src/udp.c
        src/udp.h
        src/deal_ipv4.c
        src/deal_ipv4.c
        src/rarp.c
        src/rarp.c
        src/tcp.c
        src/tcp.c
        src/icmp.c
        src/icmp.c
        src/ipv4.h
        src/ipv4.h
        src/icmp.h
        src/icmp.h
        src/tcp.h
        src/tcp.h
        src/rarp.h
        src/rarp.h
        test/test_check_sum_icmp.c
        src/deal_udp.c
        src/deal_udp.h
        src/deal_udp.h
        src/deal_udp.h
        src/deal_udp.c
        src/udp_info.c
        src/udp_info.h
        src/udp_info.h
        src/conn_status.c
        src/conn_status.h
        src/conn_status.h
        src/conn_status.c
        src/red_black.c
        src/red_black.h
        src/red_black.h
        src/red_black.h
        src/red_black.c
        src/socket.c
        src/socket.h
        src/socket.h
        src/udp_server_test.h
        src/udp_server_test.c)